[gd_scene load_steps=8 format=3 uid="uid://biu7fdium6esd"]

[ext_resource type="Script" path="res://scripts/MenuPersistent.gd" id="1_d5cl3"]
[ext_resource type="PackedScene" uid="uid://d3283guxswi41" path="res://scenes/Menus/Submenus/TitleScreen.tscn" id="2_nn5xy"]
[ext_resource type="PackedScene" uid="uid://bxo5cilexhd5g" path="res://scenes/Menus/Submenus/SettingsScreen.tscn" id="3_w4sl5"]
[ext_resource type="PackedScene" uid="uid://qb3miekn7s7v" path="res://scenes/Menus/credits_screen.tscn" id="4_gv5x2"]
[ext_resource type="PackedScene" uid="uid://6ro5mql3evsd" path="res://scenes/Menus/Submenus/ScreenTransition.tscn" id="5_u3c63"]
[ext_resource type="PackedScene" uid="uid://4qhtb4ydvax6" path="res://scenes/Menus/title_screen_decor.tscn" id="6_2w30w"]
[ext_resource type="AudioStream" uid="uid://bhckvrtn316gh" path="res://resources/audio/music/Menu_Theme.mp3" id="7_c4et4"]

[node name="VaultPersistent" type="Node2D"]
script = ExtResource("1_d5cl3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleScreen" parent="CanvasLayer" instance=ExtResource("2_nn5xy")]

[node name="SettingsScreen" parent="CanvasLayer" instance=ExtResource("3_w4sl5")]
offset_top = 1400.0
offset_bottom = 1400.0

[node name="CreditsScreen" parent="CanvasLayer" instance=ExtResource("4_gv5x2")]
offset_top = -1400.0
offset_bottom = -1400.0

[node name="ScreenTransition" parent="CanvasLayer" instance=ExtResource("5_u3c63")]
default_duration = 1.0

[node name="ExitProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.846875
anchor_top = 0.937963
anchor_right = 0.970833
anchor_bottom = 0.962963
grow_horizontal = 2
grow_vertical = 2
max_value = 2.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="TitleScreenDecor" parent="." instance=ExtResource("6_2w30w")]
play_from_start = false
background_modulate = Color(2.11775e-06, 0.64898, 0.649814, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_c4et4")
autoplay = true
bus = &"music"
parameters/looping = true

[connection signal="ButtonCreditsPressed" from="CanvasLayer/TitleScreen" to="." method="_on_title_screen_button_credits_pressed"]
[connection signal="ButtonSettingsPressed" from="CanvasLayer/TitleScreen" to="." method="_on_title_screen_button_settings_pressed"]
[connection signal="ButtonStartPressed" from="CanvasLayer/TitleScreen" to="." method="_on_title_screen_button_start_pressed"]
[connection signal="ButtonVaultPressed" from="CanvasLayer/TitleScreen" to="." method="_on_title_screen_button_vault_pressed"]
[connection signal="ButtonBackPressed" from="CanvasLayer/SettingsScreen" to="." method="_on_settings_screen_button_back_pressed"]
[connection signal="ButtonBackPressed" from="CanvasLayer/CreditsScreen" to="." method="_on_credits_screen_button_back_pressed"]
